--- a/Exemplo WebKit/Base.lproj/Main.storyboard
+++ b/Exemplo WebKit/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,49 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Exemplo_WebKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8hb-Bp-qXf">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="enS-qd-0yX">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </activityIndicatorView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="enS-qd-0yX" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="2bb-aj-fJi"/>
+                            <constraint firstItem="enS-qd-0yX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="4GB-Jj-WRD"/>
+                            <constraint firstItem="enS-qd-0yX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="4fD-fq-bAP"/>
+                            <constraint firstItem="enS-qd-0yX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="9Y1-fX-q12"/>
+                            <constraint firstItem="enS-qd-0yX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="QoZ-yU-UEw"/>
+                            <constraint firstItem="enS-qd-0yX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="RYe-kV-lPJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="enS-qd-0yX" secondAttribute="bottom" id="b9B-G3-EEb"/>
+                            <constraint firstItem="enS-qd-0yX" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="gDS-Wd-YW9"/>
+                            <constraint firstItem="enS-qd-0yX" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="mdi-px-XOs"/>
+                            <constraint firstItem="enS-qd-0yX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="nmn-V0-8Oj"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="enS-qd-0yX" secondAttribute="trailing" id="ozM-IZ-SDm"/>
+                            <constraint firstItem="enS-qd-0yX" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="r6u-jL-3Ft"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="meuActivity" destination="enS-qd-0yX" id="ELR-99-Pj5"/>
+                        <outlet property="meuWebKit" destination="8hb-Bp-qXf" id="ZNG-1d-hPk"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-98.400000000000006" y="118.29085457271366"/>
         </scene>
     </scenes>
 </document>
